// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar step-based should render with a hidden label 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-1 {
  background-color: var(--cui-bg-highlight);
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 8px;
}

.circuit-1::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: var(--cui-bg-accent-strong);
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-1::after {
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1::after {
  width: 50%;
}

.circuit-2 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 8px;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  class="circuit-0"
>
  <span
    aria-labelledby="progress-bar_2"
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0.5"
    class="circuit-1"
    max="1"
    role="progressbar"
    value="0.5"
  />
  <span
    class="circuit-2"
    id="progress-bar_2"
  >
    A progress bar
  </span>
</div>
`;

exports[`ProgressBar step-based should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-1 {
  background-color: var(--cui-bg-highlight);
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 8px;
}

.circuit-1::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: var(--cui-bg-accent-strong);
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-1::after {
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1::after {
  width: 50%;
}

.circuit-2 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 8px;
}

<div
  class="circuit-0"
>
  <span
    aria-labelledby="progress-bar_1"
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0.5"
    class="circuit-1"
    max="1"
    role="progressbar"
    value="0.5"
  />
  <span
    class="circuit-2"
    id="progress-bar_1"
  >
    A progress bar
  </span>
</div>
`;

exports[`ProgressBar time-based should render with a hidden label 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
  }

  100% {
    width: 100%;
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-1 {
  background-color: var(--cui-bg-highlight);
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 8px;
}

.circuit-1::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: var(--cui-bg-accent-strong);
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-1::after {
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 3000ms;
  animation-duration: 3000ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

.circuit-2 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 8px;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  class="circuit-0"
>
  <span
    aria-labelledby="progress-bar_5"
    class="circuit-1"
    role="progressbar"
  />
  <span
    class="circuit-2"
    id="progress-bar_5"
  >
    A progress bar
  </span>
</div>
`;

exports[`ProgressBar time-based should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
  }

  100% {
    width: 100%;
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-1 {
  background-color: var(--cui-bg-highlight);
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 8px;
}

.circuit-1::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: var(--cui-bg-accent-strong);
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-1::after {
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 3000ms;
  animation-duration: 3000ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

.circuit-2 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 8px;
}

<div
  class="circuit-0"
>
  <span
    aria-labelledby="progress-bar_4"
    class="circuit-1"
    role="progressbar"
  />
  <span
    class="circuit-2"
    id="progress-bar_4"
  >
    A progress bar
  </span>
</div>
`;

exports[`ProgressBar time-based should render with loop styles 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -moz-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -moz-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -moz-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-1 {
  background-color: var(--cui-bg-highlight);
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 8px;
}

.circuit-1::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: var(--cui-bg-accent-strong);
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-1::after {
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 3000ms;
  animation-duration: 3000ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.circuit-2 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 8px;
}

<div
  class="circuit-0"
>
  <span
    aria-labelledby="progress-bar_7"
    class="circuit-1"
    loop=""
    role="progressbar"
  />
  <span
    class="circuit-2"
    id="progress-bar_7"
  >
    A progress bar
  </span>
</div>
`;

exports[`ProgressBar time-based should render with paused styles 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
  }

  100% {
    width: 100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  100% {
    width: 100%;
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-1 {
  background-color: var(--cui-bg-highlight);
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 8px;
}

.circuit-1::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: var(--cui-bg-accent-strong);
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-1::after {
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 3000ms;
  animation-duration: 3000ms;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

.circuit-2 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 8px;
}

<div
  class="circuit-0"
>
  <span
    aria-labelledby="progress-bar_6"
    class="circuit-1"
    role="progressbar"
  />
  <span
    class="circuit-2"
    id="progress-bar_6"
  >
    A progress bar
  </span>
</div>
`;
